RancherTraining/K8sProjects/phpmyadmin/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        name: phpmyadmin
        ports:
        - containerPort: 80
          name: phpmyadmin
