RancherTraining/K8sProjects/phpmyadmin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
